--- a/public/styles/bundle.css
+++ b/public/styles/bundle.css
@@ -24054,6 +24054,14 @@ md-checkbox span {
 .md-calendar.md-default-theme, .md-calendar {
   color: black; }
 
+.fade.ng-enter {
+  transition: 0.5s linear all;
+  opacity: 0; }
+
+/* The finishing CSS styles for the enter animation */
+.fade.ng-enter.ng-enter-active {
+  opacity: 1; }
+
 @media (max-width: 800px) {
   .flex-container {
     flex-direction: column; }
